v5.2.0.0
- Fixed the server-breaking freeze bug that happened when a player lagged out.
- Fixed several possible memory leaks.
- Fixed /moveall and /map in the console.
- Fixed /click for guests.
- Fixed /pyramid so it respects block limits.
- Fixed /unload empty.
- Fixed /hide and /xhide to use custom login/logout messages.
- Fixed /renamelvl so it renames backups, and won't error if MySQL is disabled.
- Fixed /resetbot so it no longer derps like Derpy Hooves in the server console.
- Fixed level property file saving, it was breaking on certain maps.
- Fixed in-game messages from the console so they have proper coloring again.
- Fixed the player and map lists in the GUI not updating.
- Fixed color code exploits which crash clients.
- Fixed GUI so if a box is left empty in the create level (not including seed) it no longer crashes.
- Added Plugin.Events.CancelEvent().
- Added tree growing! Use /map growtrees to turn it on, place a sapling and wait a while.
- Added leaf decay! Use /map leafdecay to turn it on, requires physics.
- Added missing stuff to the "Maps" tab.
- Added seed option to /newlvl, check /help newlvl for more information.
- Added a "Games" tab to the properties window, it's for game mode configuration.
- Added server port and NickServ identify to the IRC/SQL settings tab.
- Added an easter egg. See if you can find it!
- Added global chat!
- Added commands:
	- /global or /gc - Send a message to global chat.
	- /garbage - Runs the .NET garbage collector, which frees up memory. You shouldn't need to use this often.
- Removed the duplicate "death count" option.
- Moved Zombie Survival options into the "Games" tab.
- Made it so in the CLI, you must now use a / before commands. No more chat messages being parsed as commands!
- Made it so autoload.txt doesn't save when load on /goto is enabled.
- Made some changes to the right-click menu for the maps box.
- Made a change to the window title, it looks much more professional.