@@ -1,5 +1,5 @@
 v5.2.0.0
-- Fixed the server-breaking freeze bug that happened when a player lagged out.
+- Fixed the server-breaking freeze bug that happened when a player lagged (NOT logged) out.
 - Fixed several possible memory leaks.
 - Fixed /moveall and /map in the console.
 - Fixed /click for guests.
@@ -25,6 +25,9 @@ v5.2.0.0
 - Added commands:
 	- /global or /gc - Send a message to global chat.
 	- /garbage - Runs the .NET garbage collector, which frees up memory. You shouldn't need to use this often.
+- Added blocks:
+	- griefer_stone - Kicks you when broken! Use sparingly... or all the time.
+	- op_lava - Self expanatory.
 - Removed the duplicate "death count" option.
 - Moved Zombie Survival options into the "Games" tab.
 - Made it so in the CLI, you must now use a / before commands. No more chat messages being parsed as commands!
